--- a/src/components/body/work/work-card.css
+++ b/src/components/body/work/work-card.css
@@ -1,6 +1,6 @@
 .work-card {
     padding: 8px;
-    width: 45%;
+    width: 100%;
     margin-top: 16px;
     display: flex;
     justify-content: space-between;
@@ -24,11 +24,16 @@
 .work-desc {
     text-align: left;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: horizontal;
+    /* -webkit-line-clamp: 2;
+    -webkit-box-orient: horizontal; */
     overflow: hidden ;
     text-overflow: ellipsis;
     max-width: 80%;
+}
+
+.work-designation{
+    font-size: 20px;
+    font-weight: 600;
 }
 
 
