--- a/src/components/body/main/main.css
+++ b/src/components/body/main/main.css
@@ -9,6 +9,7 @@
 
 .picture {
     height: 420px;
+    border-radius: 30%;
 }
 .main-info {
     font-size: 24px;
@@ -17,6 +18,7 @@
     color: blue;
     font-size: 32px;
 }
+
 
 @media only screen and (max-width: 720px) {
     .main-top{
