--- a/src/components/body/projects/project-card.css
+++ b/src/components/body/projects/project-card.css
@@ -27,7 +27,7 @@
 
 .tag {
     padding:  4px 8px;
-    background-color: blue;
+    background-color: rgb(206, 206, 237);
     border-radius: 4px;
     margin-right: 6px;
     margin-bottom: 4px;
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    background-color:  rgb(206, 206, 237);
     width: max-content;
     padding: 4px 8px;
     border-radius: 4px;
