--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,6 +8,10 @@ html {
     margin: auto;
 }
 
+.body{
+  margin-top: 100px;
+}
+
 @media only screen and (max-width: 1024px) {
   .home {
     width: 90%;
