--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,6 +6,7 @@
     position: relative;
     align-items: center;
 
+    /* background-color: azure; */
     background-color: white;
     position: fixed; 
     width: 70%;
