--- a/src/components/body/about/about-card.css
+++ b/src/components/body/about/about-card.css
@@ -7,7 +7,6 @@
     align-items: center;
     justify-content: center;
     margin: 6px;
-    border-radius: 8px;
 }
 
 .about-icon {
@@ -15,7 +14,8 @@
 }
 
 .about-image {
-  width: 80px;
+    width: 80px;
+    height: 100px;
 }
 
 .about-name{
